# pygame-screen

./: .pylintrc  LICENSE  README.md  example_1.py  example_2.py  pyproject.toml
.github/workflows/: pylint.yml  python-isort.yml
examples/: README.md  example_1.py  example_2.py
pygame_screen/: __init__.py  geometry.py  screen.py  screencenterfixedsize.py  screencontain.py  screencover.py  screenfill.py  screenfixed.py  screenmatch.py  screennone.py  screenscaledown.py  settings.py
pygame_screen/fit/: __init__.py  objectfit.py  surfacefit.py
tests/: README.md
